set Java version, from `17` to `8`