@@ -19,6 +19,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.BiPredicate;
+import java.util.stream.Collectors;
 
 public final class SignMenuFactory {
 
@@ -99,7 +100,7 @@ public final class SignMenuFactory {
             player.sendBlockChange(location, Material.OAK_SIGN.createBlockData());
             player.sendSignChange(
                     location,
-                    text.stream().map(this::color).toList().toArray(new String[4]));
+                    text.stream().map(this::color).collect(Collectors.toList()).toArray(new String[4]));
 
             PacketContainer openSign = ProtocolLibrary.getProtocolManager().createPacket(PacketType.Play.Server.OPEN_SIGN_EDITOR);
             BlockPosition position = new BlockPosition(location.getBlockX(), location.getBlockY(), location.getBlockZ());
